Fixed edit pencil and twitter logo alignment.

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -13,6 +13,9 @@ body {
 .right_logo {
     text-align: center;
 }
+.entity-twitter-logo {
+    padding-left: 15pt;
+}
 .logo {
     position: relative;
     background-color: #D0D0D0 ;
